fix(style): trucated bottom on mobile because of web browser gui

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -88,5 +88,6 @@ h2 {
         left: 0%;
         width: 100%;
         height: 100%;
+        padding-bottom: 5vh;
     }
 }
